# ficha

./: .gitignore  LICENSE  README.md
.github/workflows/: README.md  canonical-empresa-history.yml  canonical-shadow-history.yml  canonical-simples-history.yml  ci.yml  claude-diagnostics.yml  claude-jules-fanout.yml  claude-jules-inspect.yml  claude-jules-poller.yml  claude-jules-reply.yml  claude-jules.yml  consolidate-canonical-shadow-once.yml  debug-canonical-consolidation-once.yml  deploy.yml  dispatch-verify-roundtrip-decision.yml  estabelecimento-key-audit.yml  etl-bootstrap.yml  etl-evidence-decision-dispatch.yml  etl-evidence.yml  etl-monthly.yml  etl-smoke.yml  etl-streaming-benchmark.yml  finalize-canonical-shadow-once.yml  fix-canonical-shadow-once.yml  fix-clean-canonical-sentinel-once.yml  format-canonical-shadow-once.yml  format-roundtrip-once.yml  probe-nextcloud.yml  roundtrip-validation-debug.yml  run-canonical-history-once.yml  socio-key-audit.yml
docs/: audit-2026-07-18.md  canonical-empresa-history.md  canonical-estabelecimento-history.md  canonical-estabelecimento-shadow.md  canonical-simples-history.md  ibis-cnpjs-benchmark-2026-07-18.md  ibis-raizes-benchmark-2026-07-18.md  ibis-raizes-fusion-benchmark-2026-07-18.md  perf-audit-2026-05.md  perf-plan-2026-05.md  socio-key-investigation.md  vision-blockers-2026-07.md
docs/adr/: 0001-astro-svelte-stack.md  0002-no-tanstack-db.md  0003-schema-versioning.md  0004-internet-archive-as-storage.md  README.md  (+20 more)
etl/: README.md  consolidation-status.txt  pyproject.toml  sampling_poc.py
etl/bench/: README.md  _profile.py  ab_codecs.py  ab_contatos_cnaes.py  ab_typed_keys.py  ab_verify_roundtrip.py  benchmark.py  dedup_evidence.py  run_with_peaks.py
etl/bench/evidence/: 2026-07-19-production-profile.md  2026-07-20-roundtrip-raw.json  2026-07-20-roundtrip-verifier.md
etl/output_poc/: base_amostra.parquet
etl/poc_acre/: poc_acre.py
etl/poc_acre/data/: estabelecimentos.csv
etl/poc_acre/output/: cnpjs_AC.parquet
etl/scripts/diagnostics/: companies_zip_latency.py  doc_format_poc.py  ia_practicality.py  ibis_cnpjs_benchmark.py  ibis_raizes_agg_benchmark.py  ibis_raizes_fusion_benchmark.py  pack_e2e.py  phase1.py  zip_layout_poc.py
etl/scripts/jules/: fanout_spawner.py  inspect_request.json  poll_all_sessions.py  reply_dispatcher.py  reply_queue.json  spawn_and_poll.py  spawn_queue.json  spawn_session.py
etl/scripts/jules/prompts/: README.md  adrs_for_new_parquets.md  playwright_e2e_analytical_parquets.md  sample.md  verne_activity_summary.md  verne_strict_json.md  verne_wait_until_attention.md  w10_per_lookup_parquets.md  w11_cnpj_cnaes.md  w12_cnpj_contatos.md  w21_encoding_sniff.md  w41_search_length14_branch.md  w42_cnpjs_summary_split.md
etl/src/ficha_etl/: __init__.py  canonical.py  canonical_history.py  canonical_history_empresa.py  canonical_history_simples.py  canonical_registry.py  canonical_shadow.py  cli.py  download.py  estabelecimento_key_audit.py  fetcher.py  manifest.py  metrics.py  mirror.py  pack.py  progress.py  registry.py  smoke.py  socio_key_audit.py  sources.py  streaming.py  transform.py  upload.py  upstream.py
etl/src/ficha_etl/proto/ficha/v1/: company_pb2.py
etl/tests/: test_canonical_history.py  test_canonical_history_empresa.py  test_canonical_history_simples.py  test_canonical_part.py  test_canonical_registry.py  test_canonical_shadow.py  test_cli.py  test_download.py  test_estabelecimento_key_audit.py  test_etl_bootstrap_workflow.py  test_etl_monthly_workflow.py  test_fetcher.py  test_manifest.py  test_metrics.py  test_mirror.py  test_registry.py  test_smoke.py  test_socio_key_audit.py  test_sources.py  test_streaming_poc.py  test_transform.py  test_upload.py  test_upstream.py
experiments/: README.md
ficha-py/: .gitignore  README.md  pyproject.toml
ficha-py/src/ficha_py/: __init__.py  connect.py  tables.py  views.py
ficha-py/tests/: test_smoke.py
notebooks/: 01-comecando.ipynb  02-busca-por-uf.ipynb  03-grafo-de-socios.ipynb
web/: astro.config.mjs  package.json  tsconfig.json
(+37 files in other folders)
