[project]
name = "ficha-etl"
version = "0.0.1"
description = "ETL pipeline for FICHA — transforms RFB CNPJ dumps into Parquet snapshots and publishes to Internet Archive."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "duckdb>=1.0.0",
    "pyarrow>=17.0.0",
    "httpx>=0.27.0",
    "internetarchive>=4.0.0",
    # Diagnostics-only: doc_format_poc compares JSON vs MessagePack vs
    # Protobuf wire size for the per-company ZIP design.
    "msgpack>=1.0.0",
    "pure-protobuf>=3.0.0",
    # pack.py (per-company ZIP producer) uses google.protobuf runtime.
    # Floor must match the generated company_pb2.py runtime version check
    # (currently 6.31.1) — installing an older protobuf raises ImportError
    # at module load before any ETL code runs.
    "protobuf>=6.31.1",
    # Camada analítica compartilhada (ADR 0017) — usada hoje em
    # write_lookup_parquets; monorepo local path, não publicado no PyPI.
    "ficha-py",
    # Progress bars for `ficha-etl run`/`transform_snapshot` — auto-disabled
    # when stdout isn't a terminal, so CI logs are unaffected.
    "rich>=13.7.0",
]

[tool.uv.sources]
ficha-py = { path = "../ficha-py", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
    "grpcio-tools>=1.60.0",  # bundles protoc — generates company_pb2.py from .proto
    "pyyaml>=6.0",  # parseia .github/workflows/*.yml nos testes estáticos
]

[project.scripts]
ficha-etl = "ficha_etl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ficha_etl"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "src/ficha_etl/proto/**",  # generated by protoc — do not lint/format
]
